Ik heb de tabel aangepast.

--- a/page2.html
+++ b/page2.html
@@ -26,19 +26,37 @@ Giving an example:</p>
 
 <table border=2 width="100%" class="center">
 <tr>
-<th> Friend No. </th>      <th> Search Words </th>   <th> Search Results </th>    
+ <THEAD>
+ <CAPTION>Results of the expirement:</CAPTION>
+ <th> Friend No. </th>      
+ <th> Search Words </th>   
+ <th> Search Results </th>    
+</tr>
+ <THEAD>
+ <TBODY>
+ <td>Friend No.1 </td>      
+ <td>Milk </td>         
+ <td>Shopping list of shops where you can buy milk. </td></tr>
 <tr>
-<td>Friend No.1 </td>      <td>Milk </td>         <td>Shopping list of shops where you can buy milk. </td></tr>
+ <td>Friend No.2 </td>      
+ <td>Milk </td>         
+ <td>Information on how milk is made. </td></tr>
 <tr>
-<td>Friend No.2 </td>      <td>Milk </td>         <td>Information on how milk is made. </td></tr>
+ <td>Friend No.1 </td>      
+ <td>Train </td>         
+ <td>Train tickets. </td></tr>
 <tr>
-<td>Friend No.1 </td>      <td>Train </td>         <td>Train tickets. </td></tr>
+ <td>Friend No.2 </td>      
+ <td>Train </td>         
+ <td>Information on how trains are made & operated. </td></tr>
 <tr>
-<td>Friend No.2 </td>      <td>Train </td>         <td>Information on how trains are made & operated. </td></tr>
+ <td>Friend No.1 </td>      
+ <td>The Netherlands </td> 
+ <td>Information on the capital city, Amsterdam. </td></tr>
 <tr>
-<td>Friend No.1 </td>      <td>The Netherlands </td> <td>Information on the capital city, Amsterdam. </td></tr>
-<tr>
-<td>Friend No.2 </td>      <td>The Netherlands </td>  <td>Weather information from The Hague. </td></tr>
+ <td>Friend No.2 </td>      
+ <td>The Netherlands </td>  <td>Weather information from The Hague. </td></tr>
+<TBODY>
 </table>
 
 <h2> How do social bubbles arise?</h2>
